# CompitoPalano_es6

./: CMakeLists.txt  CompletionObserver.cpp  CompletionObserver.h  Observer.cpp  Observer.h  ProgressObserver.cpp  ProgressObserver.h  Subject.cpp  Subject.h  Video.cpp  Video.h  VideoConverter.cpp  VideoConverter.h  main.cpp
